--- a/src/App.css
+++ b/src/App.css
@@ -3,4 +3,14 @@
   float: left;
   height: 100vh;
 }
+
+.esri-identity-modal__dialog {
+  width: 500px;
+  background-color: white;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+}
 /*# sourceMappingURL=App.css.map */
