--- a/src/App.scss
+++ b/src/App.scss
@@ -3,3 +3,13 @@
   float: left;
   height: 100vh;
 }
+
+.esri-identity-modal__dialog {
+  width: 500px;
+  background-color: white;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+}
