--- a/src/Pages/Adjudications/adj.css
+++ b/src/Pages/Adjudications/adj.css
@@ -5,21 +5,6 @@
   background-size: cover;
 }
 
-.page__container__Adjudication .adj__manage__POU {
-  position: relative;
-  float: left;
-  height: calc(100% - 30px);
-  overflow-y: auto;
-}
-
-.page__container__Adjudication .adj__manage__POU--active {
-  width: 50%;
-}
-
-.page__container__Adjudication .adj__manage__POU--hidden {
-  width: 0px;
-}
-
 .page__container__Adjudication .adj__map__container {
   position: relative;
   float: left;
@@ -27,7 +12,91 @@
   height: calc(100% - 30px);
 }
 
-.page__container__Adjudication .adj__map__container--active {
-  width: calc(100% - 50%);
+.page__container__Adjudication .adj__map__container .adj__map,
+.page__container__Adjudication .adj__map__container #adjViewDiv {
+  width: 100%;
+  height: 100%;
+}
+
+.page__container__Adjudication .adj__map__container .adj__map {
+  float: right;
+}
+
+.page__container__Adjudication .adj__map__container .adj__map--active {
+  width: calc(100% - 60%);
+}
+
+.page__container__Adjudication .adj__map__container .adj__manage__POU {
+  position: relative;
+  float: left;
+  height: calc(100% - 30px);
+  overflow-y: auto;
+}
+
+.page__container__Adjudication .adj__map__container .adj__manage__POU--active {
+  width: 60%;
+}
+
+.page__container__Adjudication .adj__map__container .adj__manage__POU--hidden {
+  width: 0px;
+}
+
+.page__container__Adjudication .adj__map__container .adj__manage__POU .adj_form {
+  border-bottom: 2px gray dashed;
+}
+
+.page__container__Adjudication .adj__map__container .adj__manage__POU .adj_form label {
+  font-size: 0.6rem;
+  font-weight: 600;
+}
+
+.page__container__Adjudication .adj__map__container .adj__manage__POU .adj_form_inline {
+  border-bottom: 2px gray dashed;
+  padding: 10px 0px 10px 0px;
+}
+
+.page__container__Adjudication .adj__map__container .adj__manage__POU .adj_form_inline label {
+  font-weight: 600;
+  float: left;
+  font-size: 0.6rem;
+  width: 50%;
+}
+
+@media (max-width: 1260px) {
+  .page__container__Adjudication .adj__map__container .adj__manage__POU .adj_form_inline label {
+    width: 100%;
+  }
+}
+
+.page__container__Adjudication .adj__map__container .adj__manage__POU .adj_form_inline input {
+  width: 50%;
+  float: left;
+}
+
+@media (max-width: 1260px) {
+  .page__container__Adjudication .adj__map__container .adj__manage__POU .adj_form_inline input {
+    width: 100%;
+  }
+}
+
+.page__container__Adjudication .adj__map__container .adj__manage__POU .adj_form_inline .row {
+  margin-top: 5px;
+  float: left;
+  width: 100%;
+}
+
+.page__container__Adjudication .adj__map__container .adj__manage__POU .adj_form_inline .row .col-6 {
+  padding-right: 0;
+}
+
+.page__container__Adjudication .adj__map__container .adj__manage__POU .adj_form_inline .row .col-6 label {
+  font-weight: 600;
+  float: left;
+  font-size: 0.6rem;
+  width: 40%;
+}
+
+.page__container__Adjudication .adj__map__container .adj__manage__POU .adj_form_inline .row .col-6 input {
+  width: 60%;
 }
 /*# sourceMappingURL=adj.css.map */
