--- a/src/Pages/Adjudications/adj.scss
+++ b/src/Pages/Adjudications/adj.scss
@@ -1,3 +1,5 @@
+@import "./../../cssVariables.scss";
+
 .page__container__Home {
   color: white;
   background-image: url("./../../Images/image.png");
@@ -6,26 +8,93 @@
 }
 
 .page__container__Adjudication {
-  .adj__manage__POU {
-    position: relative;
-    float: left;
-    height: calc(100% - 30px);
-    overflow-y: auto;
-    &--active {
-      width: 50%;
-    }
-    &--hidden {
-      width: 0px;
-    }
-  }
   .adj__map__container {
     position: relative;
     float: left;
     width: 100%;
     height: calc(100% - 30px);
+    // &--active {
+    //   width: calc(100% - 60%);
+    // }
+    .adj__map,
+    #adjViewDiv {
+      width: 100%;
+      height: 100%;
+    }
+    .adj__map {
+      float: right;
+      &--active {
+        width: calc(100% - 60%);
+      }
+    }
+    .adj__manage__POU {
+      position: relative;
+      float: left;
+      height: calc(100% - 30px);
+      overflow-y: auto;
+      &--active {
+        width: 60%;
+      }
+      &--hidden {
+        width: 0px;
+      }
 
-    &--active {
-      width: calc(100% - 50%);
+      .adj_form {
+        border-bottom: 2px gray dashed;
+        label {
+          font-size: 0.6rem;
+          font-weight: 600;
+        }
+        &_inline {
+          border-bottom: 2px gray dashed;
+          padding: 10px 0px 10px 0px;
+
+          label {
+            font-weight: 600;
+            float: left;
+            font-size: 0.6rem;
+            width: 50%;
+            @media (max-width: $xlarge) {
+              width: 100%;
+            }
+          }
+          input {
+            width: 50%;
+            float: left;
+            @media (max-width: $xlarge) {
+              width: 100%;
+            }
+          }
+
+          .row {
+            margin-top: 5px;
+            float: left;
+            width: 100%;
+            .col-6 {
+              padding-right: 0;
+              label {
+                font-weight: 600;
+                float: left;
+                font-size: 0.6rem;
+                width: 40%;
+              }
+              input {
+                width: 60%;
+              }
+            }
+          }
+        }
+      }
     }
   }
+  // .adj__map__container {
+  //   position: relative;
+  //   float: left;
+  //   width: 100%;
+  //   height: calc(100% - 30px);
+
+  //   // &--active {
+  //   //   width: calc(100% - 60%);
+  //   // }
+  // }
 }
