--- a/src/components/Cards/Cards.css
+++ b/src/components/Cards/Cards.css
@@ -1,9 +1,3 @@
-.card {
-  max-height: 1000px;
-  -webkit-transition: max-height 300ms;
-  transition: max-height 300ms;
-}
-
 .card .card__title {
   background-color: #242424;
   width: 100%;
@@ -17,13 +11,37 @@
   background-color: #585858;
 }
 
-.card--hidden {
-  max-height: 40px;
-  -webkit-transition: max-height 300ms;
-  transition: max-height 300ms;
+.card--visible {
+  max-height: 1000px;
+  -webkit-transition: all 500ms;
+  transition: all 500ms;
 }
 
-.card--hidden .card__content {
-  display: none;
+.card--visible .card__expand__container {
+  overflow: hidden;
+}
+
+.card--visible .card__expand__container .card__content--visible {
+  margin-top: 0;
+  opacity: 1;
+  -webkit-transition: all 500ms;
+  transition: all 500ms;
+}
+
+.card--hidden {
+  max-height: 40px;
+  -webkit-transition: all 500ms;
+  transition: all 500ms;
+}
+
+.card--hidden .card__expand__container {
+  overflow: hidden;
+}
+
+.card--hidden .card__expand__container .card__content--hidden {
+  opacity: 0;
+  margin-top: -100%;
+  -webkit-transition: all 500ms;
+  transition: all 500ms;
 }
 /*# sourceMappingURL=Cards.css.map */
