--- a/src/cssVariables.scss
+++ b/src/cssVariables.scss
@@ -1,4 +1,8 @@
+// @media target values
 $large: 901px;
 $xlarge: 1260px;
 $small: 900px;
 $small-horizontal: 500px;
+
+//navbar
+$navbarDefaultWidth: 175px;
