--- a/src/Pages/Adjudications/adj.css
+++ b/src/Pages/Adjudications/adj.css
@@ -1,8 +1,10 @@
-.page__container__Home {
+.page__container__Adjudication .adj_home {
   color: white;
   background-image: url("./../../Images/image.png");
   background-position: center;
   background-size: cover;
+  width: 100%;
+  height: calc(100% - 30px);
 }
 
 .page__container__Adjudication .adj__map__container {
