--- a/src/cssVariables.css
+++ b/src/cssVariables.css
@@ -1,1 +1,6 @@
-/* No CSS *//*# sourceMappingURL=cssVariables.css.map */
+/* Coolors Exported Palette - https://coolors.co/003049-d62828-f77f00-fcbf49-eae2b7 */
+/* SCSS HEX */
+/* SCSS HSL */
+/* SCSS RGB */
+/* SCSS Gradient */
+/*# sourceMappingURL=cssVariables.css.map */
