styling for bookmarks and icons for ribbon

--- a/src/Pages/Adjudications/adj.css
+++ b/src/Pages/Adjudications/adj.css
@@ -1,3 +1,8 @@
+/* Coolors Exported Palette - https://coolors.co/f94144-f3722c-f8961e-f9c74f-90be6d-43aa8b-577590 */
+/* SCSS HEX */
+/* SCSS HSL */
+/* SCSS RGB */
+/* SCSS Gradient */
 .page__container__Adjudication .adj_home {
   color: white;
   background-image: url("./../../Images/image.png");
@@ -5,6 +10,37 @@
   background-size: cover;
   width: 100%;
   height: calc(100% - 30px);
+}
+
+.page__container__Adjudication .adj__ribbon__container {
+  float: right;
+  margin-right: 10px;
+  height: 100%;
+}
+
+.page__container__Adjudication .adj__ribbon__container .adj__ribbon__button {
+  height: calc(100% - 6px);
+  width: 30px;
+  position: relative;
+  outline: none;
+  text-decoration: none;
+  border: 1px solid white;
+  border-radius: 4px;
+  background-color: rgba(255, 255, 255, 0);
+  margin: 3px;
+}
+
+.page__container__Adjudication .adj__ribbon__container .adj__ribbon__button--active {
+  background-color: #f8961e;
+}
+
+.page__container__Adjudication .adj__ribbon__container .adj__ribbon__button svg {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  fill: white;
 }
 
 .page__container__Adjudication .adj__map__container {
