--- a/src/components/ESRI/ESRI.scss
+++ b/src/components/ESRI/ESRI.scss
@@ -1,8 +1,118 @@
+@import "./../../cssVariables.scss";
+
 .bookmark {
   position: absolute;
   top: 30px;
   right: 0;
   z-index: 100;
-  width: 300px;
-  background-color: white;
+  width: 200px;
+  background-color: $queen-blue;
+  max-height: 300px;
+  overflow-y: auto;
+  box-shadow: 10px 10px 15px 11px rgba(0, 0, 0, 0.5);
+  svg {
+    width: 18px;
+    height: 18px;
+  }
+  .bookmark__input__container {
+    height: 40px;
+    background-color: $queen-blue;
+    padding: 5px;
+    border-bottom: 1px solid $queen-blue;
+    .bookmark_svg {
+      width: 35px;
+      margin-right: 5px;
+      height: 30px;
+      float: left;
+      border: 1px solid $maize-crayola;
+      border-radius: 4px;
+      position: relative;
+      svg {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        -ms-transform: translate(-50%, -50%);
+        transform: translate(-50%, -50%);
+        width: 20px;
+        height: 18px;
+        fill: $maize-crayola;
+      }
+    }
+    input {
+      width: calc(100% - 40px);
+      float: left;
+      height: 30px;
+    }
+  }
+  .bookmark_item {
+    background-color: $queen-blue;
+    height: 40px;
+    color: white;
+    padding: 5px;
+    border: 1px solid white;
+    border-radius: 4px;
+    margin: 2px;
+    &--active {
+      background-color: $pistachio;
+      transition: all 300ms;
+      .bookmark_svg {
+        background-color: rgba(255, 255, 255, 0) !important;
+      }
+      .bookmark_svg_delete {
+        background-color: rgba(255, 255, 255, 0) !important;
+        border-color: $red-salsa !important;
+        svg {
+          fill: $red-salsa !important;
+        }
+      }
+    }
+    .bookmark_svg {
+      width: 35px;
+      margin-right: 5px;
+      height: 30px;
+      float: left;
+      background-color: $queen-blue;
+      border: 1px solid white;
+      border-radius: 4px;
+      position: relative;
+      svg {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        -ms-transform: translate(-50%, -50%);
+        transform: translate(-50%, -50%);
+        width: 20px;
+        height: 18px;
+        fill: white;
+      }
+      label {
+        width: 100px;
+        margin-left: 45px;
+        float: left;
+        height: 30px;
+        font-size: 0.8rem;
+      }
+    }
+
+    .bookmark_svg_delete {
+      width: 35px;
+      margin-right: 5px;
+      height: 30px;
+      float: right;
+      background-color: $red-salsa;
+      border: 1px solid white;
+      border-radius: 4px;
+      position: relative;
+      svg {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        -ms-transform: translate(-50%, -50%);
+        transform: translate(-50%, -50%);
+        width: 20px;
+        height: 18px;
+        fill: white;
+      }
+    }
+  }
 }
