--- a/src/cssVariables.scss
+++ b/src/cssVariables.scss
@@ -6,99 +6,122 @@ $small-horizontal: 500px;
 
 //navbar
 $navbarDefaultWidth: 175px;
-
-/* Coolors Exported Palette - https://coolors.co/003049-d62828-f77f00-fcbf49-eae2b7 */
+/* Coolors Exported Palette - https://coolors.co/f94144-f3722c-f8961e-f9c74f-90be6d-43aa8b-577590 */
 
 /* SCSS HEX */
-$prussian-blue: #003049ff;
-$maximum-red: #d62828ff;
-$orange: #f77f00ff;
-$maximum-yellow-red: #fcbf49ff;
-$lemon-meringue: #eae2b7ff;
+$red-salsa: #f94144ff;
+$orange-red: #f3722cff;
+$yellow-orange-color-wheel: #f8961eff;
+$maize-crayola: #f9c74fff;
+$pistachio: #90be6dff;
+$zomp: #43aa8bff;
+$queen-blue: #577590ff;
 
 /* SCSS HSL */
-$prussian-blue: hsla(201, 100%, 14%, 1);
-$maximum-red: hsla(0, 69%, 50%, 1);
-$orange: hsla(31, 100%, 48%, 1);
-$maximum-yellow-red: hsla(40, 97%, 64%, 1);
-$lemon-meringue: hsla(51, 55%, 82%, 1);
+$red-salsa: hsla(359, 94%, 62%, 1);
+$orange-red: hsla(21, 89%, 56%, 1);
+$yellow-orange-color-wheel: hsla(33, 94%, 55%, 1);
+$maize-crayola: hsla(42, 93%, 64%, 1);
+$pistachio: hsla(94, 38%, 59%, 1);
+$zomp: hsla(162, 43%, 46%, 1);
+$queen-blue: hsla(208, 25%, 45%, 1);
 
 /* SCSS RGB */
-$prussian-blue: rgba(0, 48, 73, 1);
-$maximum-red: rgba(214, 40, 40, 1);
-$orange: rgba(247, 127, 0, 1);
-$maximum-yellow-red: rgba(252, 191, 73, 1);
-$lemon-meringue: rgba(234, 226, 183, 1);
+$red-salsa: rgba(249, 65, 68, 1);
+$orange-red: rgba(243, 114, 44, 1);
+$yellow-orange-color-wheel: rgba(248, 150, 30, 1);
+$maize-crayola: rgba(249, 199, 79, 1);
+$pistachio: rgba(144, 190, 109, 1);
+$zomp: rgba(67, 170, 139, 1);
+$queen-blue: rgba(87, 117, 144, 1);
 
 /* SCSS Gradient */
 $gradient-top: linear-gradient(
   0deg,
-  #003049ff,
-  #d62828ff,
-  #f77f00ff,
-  #fcbf49ff,
-  #eae2b7ff
+  #f94144ff,
+  #f3722cff,
+  #f8961eff,
+  #f9c74fff,
+  #90be6dff,
+  #43aa8bff,
+  #577590ff
 );
 $gradient-right: linear-gradient(
   90deg,
-  #003049ff,
-  #d62828ff,
-  #f77f00ff,
-  #fcbf49ff,
-  #eae2b7ff
+  #f94144ff,
+  #f3722cff,
+  #f8961eff,
+  #f9c74fff,
+  #90be6dff,
+  #43aa8bff,
+  #577590ff
 );
 $gradient-bottom: linear-gradient(
   180deg,
-  #003049ff,
-  #d62828ff,
-  #f77f00ff,
-  #fcbf49ff,
-  #eae2b7ff
+  #f94144ff,
+  #f3722cff,
+  #f8961eff,
+  #f9c74fff,
+  #90be6dff,
+  #43aa8bff,
+  #577590ff
 );
 $gradient-left: linear-gradient(
   270deg,
-  #003049ff,
-  #d62828ff,
-  #f77f00ff,
-  #fcbf49ff,
-  #eae2b7ff
+  #f94144ff,
+  #f3722cff,
+  #f8961eff,
+  #f9c74fff,
+  #90be6dff,
+  #43aa8bff,
+  #577590ff
 );
 $gradient-top-right: linear-gradient(
   45deg,
-  #003049ff,
-  #d62828ff,
-  #f77f00ff,
-  #fcbf49ff,
-  #eae2b7ff
+  #f94144ff,
+  #f3722cff,
+  #f8961eff,
+  #f9c74fff,
+  #90be6dff,
+  #43aa8bff,
+  #577590ff
 );
 $gradient-bottom-right: linear-gradient(
   135deg,
-  #003049ff,
-  #d62828ff,
-  #f77f00ff,
-  #fcbf49ff,
-  #eae2b7ff
+  #f94144ff,
+  #f3722cff,
+  #f8961eff,
+  #f9c74fff,
+  #90be6dff,
+  #43aa8bff,
+  #577590ff
 );
 $gradient-top-left: linear-gradient(
   225deg,
-  #003049ff,
-  #d62828ff,
-  #f77f00ff,
-  #fcbf49ff,
-  #eae2b7ff
+  #f94144ff,
+  #f3722cff,
+  #f8961eff,
+  #f9c74fff,
+  #90be6dff,
+  #43aa8bff,
+  #577590ff
 );
 $gradient-bottom-left: linear-gradient(
   315deg,
-  #003049ff,
-  #d62828ff,
-  #f77f00ff,
-  #fcbf49ff,
-  #eae2b7ff
+  #f94144ff,
+  #f3722cff,
+  #f8961eff,
+  #f9c74fff,
+  #90be6dff,
+  #43aa8bff,
+  #577590ff
 );
 $gradient-radial: radial-gradient(
-  #003049ff,
-  #d62828ff,
-  #f77f00ff,
-  #fcbf49ff,
-  #eae2b7ff
+  #f94144ff,
+  #f3722cff,
+  #f8961eff,
+  #f9c74fff,
+  #90be6dff,
+  #43aa8bff,
+  #577590ff
 );
