--- a/src/Pages/UserStory/Story.scss
+++ b/src/Pages/UserStory/Story.scss
@@ -1,16 +1,17 @@
 
 
 #StoryContainer {
+    // background: rgb(2,0,36);
+    // background: radial-gradient(circle, rgba(2,0,36,1) 0%, rgba(0,83,99,1) 0%, rgba(9,77,121,1) 97%);
     background: rgb(2,0,36);
-    background: radial-gradient(circle, rgba(2,0,36,1) 0%, rgba(0,83,99,1) 0%, rgba(9,77,121,1) 97%);
+    background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(24,69,78,1) 51%, rgba(2,0,36,1) 100%);
     height: 100%;
     width: 100%;
 
-    label {
-        color: white;
-    }
-
-    input {
-        width: 100%
+    .jumbotron {
+        padding-top: 5%;
+        input {
+            width: 100%
+        }
     }
 }
