--- a/src/cssVariables.scss
+++ b/src/cssVariables.scss
@@ -6,6 +6,8 @@ $small-horizontal: 500px;
 
 //navbar
 $navbarDefaultWidth: 175px;
+
+$navbarGrey:#3a3633;
 /* Coolors Exported Palette - https://coolors.co/f94144-f3722c-f8961e-f9c74f-90be6d-43aa8b-577590 */
 
 /* SCSS HEX */
