--- a/src/Pages/Adjudications/adj.css
+++ b/src/Pages/Adjudications/adj.css
@@ -47,13 +47,44 @@
   position: relative;
   float: left;
   width: 100%;
-  height: calc(100% - 30px);
+  height: calc(100% - 60px);
+}
+
+.page__container__Adjudication .adj__map__container .adj__map__toolbar {
+  padding: 3px 10px 3px 3px;
+  width: 100%;
+  height: 30px;
+  z-index: 100000;
+  background-color: #577590;
+  -webkit-box-shadow: -3px 10px 14px rgba(0, 0, 0, 0.41);
+          box-shadow: -3px 10px 14px rgba(0, 0, 0, 0.41);
+  position: relative;
+}
+
+.page__container__Adjudication .adj__map__container .adj__map__toolbar button {
+  height: 100%;
+  position: relative;
+  width: 30px;
+  float: right;
+  outline: none;
+  text-decoration: none;
+  border: 1px solid white;
+  border-radius: 3px;
+}
+
+.page__container__Adjudication .adj__map__container .adj__map__toolbar button svg {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
 }
 
 .page__container__Adjudication .adj__map__container .adj__map,
 .page__container__Adjudication .adj__map__container #adjViewDiv {
   width: 100%;
   height: 100%;
+  z-index: 1;
 }
 
 .page__container__Adjudication .adj__map__container .adj__map {
