--- a/src/Pages/DrillerLog/Log.css
+++ b/src/Pages/DrillerLog/Log.css
@@ -1,3 +1,8 @@
+/* Coolors Exported Palette - https://coolors.co/f94144-f3722c-f8961e-f9c74f-90be6d-43aa8b-577590 */
+/* SCSS HEX */
+/* SCSS HSL */
+/* SCSS RGB */
+/* SCSS Gradient */
 #LogContainer {
   background-image: url("./../../Images/lithologyBackground_resize.jpg");
   background-position: center;
